apps/ha/config/ha-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: homeassistant
  name: homeassistant
  namespace: web
spec:
  ports:
    - name: http
      port: 8123
      targetPort: 8123
  selector:
    io.kompose.service: homeassistant
