apps/ha/config/ha-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: "default-redirect-https@kubernetescrd"
  name: home-assistant
  namespace: home-assistant
spec:
  rules:
  - host: home.myogg.dev
    http:
      paths:
      - backend:
          service:
            name: home-assistant
            port:
              name: http
        path: /
        pathType: Prefix
